# nanowave-daemon

./: .gitignore  Cargo.toml  README.md  notes.md  player.db
.cargo/: config.toml
src/: api.rs  api_command.rs  json_rpc_handler.rs  main.rs
src/media_source/: file_media_source.rs  media_source.rs  media_source_command.rs  media_source_event.rs  mod.rs  utils.rs
src/player/: player.rs  player_new.rs  player_old.rs
