[package]
name = "nanowave-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures-util = "0.3"
url = "2"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4.43"
