[package]
name = "nanowave-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures-util = "0.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.43"
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16.0"
rodio = "0.21.1"
walkdir = "2"
evdev = "0.13.2"
async-trait = "0.1.89"
lofty = "0.22.4"
mp4ameta = "0.13.0"
sea-orm = { version = "2.0.0-rc.21", features = [ "sqlx-sqlite", "macros", "runtime-tokio", "debug-print", "with-chrono", "with-json" ] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
sea-orm-migration = "2.0.0-rc.28"
file-id = "0.2.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
image = "0.25.9"
parking_lot = "0.12.5"
media_source = "0.1.0"
anyhow = "1.0.100"
